--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Buscador de Cuecas por Tono</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -22,18 +23,18 @@
           <select id="tono">
             <option value="">-- Elige un tono --</option>
             <option value="Do">Do</option>
-            <option value="Re">Re</option>
-            <option value="Mi">Mi</option>
-            <option value="Fa">Fa</option>
-            <option value="Sol">Sol</option>
-            <option value="La">La</option>
-            <option value="Si">Si</option>
             <option value="Do">Dom</option>
+            <option value="Re">Re</option>
             <option value="Re">Rem</option>
+            <option value="Mi">Mi</option>
             <option value="Mi">Mim</option>
+            <option value="Fa">Fa</option>
             <option value="Fa">Fam</option>
+            <option value="Sol">Sol</option>
             <option value="Sol">Solm</option>
+            <option value="La">La</option>
             <option value="La">Lam</option>
+            <option value="Si">Si</option>
             <option value="Si">Sim</option>
           </select>
         </div>
