--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Buscador de Cuecas por Tono</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <header class="encabezado">
     <h1>Buscador de Cuecas por Tono</h1>
@@ -21,22 +23,30 @@
         <div class="grupo">
           <label for="tono">Selecciona el tono</label>
           <select id="tono">
-            <option value="">-- Elige un tono --</option>
+            <option value="">-- Selecciona un tono --</option>
+
             <option value="Do">Do</option>
-            <option value="Do">Dom</option>
+            <option value="Dom">Dom</option>
+
             <option value="Re">Re</option>
-            <option value="Re">Rem</option>
+            <option value="Rem">Rem</option>
+
             <option value="Mi">Mi</option>
-            <option value="Mi">Mim</option>
+            <option value="Mim">Mim</option>
+
             <option value="Fa">Fa</option>
-            <option value="Fa">Fam</option>
+            <option value="Fam">Fam</option>
+
             <option value="Sol">Sol</option>
-            <option value="Sol">Solm</option>
+            <option value="Solm">Solm</option>
+
             <option value="La">La</option>
-            <option value="La">Lam</option>
+            <option value="Lam">Lam</option>
+
             <option value="Si">Si</option>
-            <option value="Si">Sim</option>
+            <option value="Sim">Sim</option>
           </select>
+
         </div>
 
         <button type="submit" class="btn-principal">Sapiar Cuequitas</button>
@@ -62,4 +72,5 @@
   <script src="app.js"></script>
 
 </body>
+
 </html>
