--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Buscador de Cuecas por Tono</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css?v=1">
+  <script src="app.js?v=1"></script>
 </head>
 
 <body>
@@ -74,3 +75,4 @@
 </body>
 
 </html>
+
