--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
 
 <body>
+  <div style="text-align:center; margin-top:20px;">
+  <a href="https://ahorasiqueescribo.blogspot.com/" target="_blank" class="boton-enlace">
+    Ver Cuecas Filetes
+  </a>
+</div>
    <header class="encabezado">
     <h1>Buscador de Cuecas por Tono</h1>
     <p>CUECANCIONERO CHORO</p>
@@ -74,6 +79,7 @@
 </body>
 
 </html>
+
 
 
 
