--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
   <footer class="pie">
     <p>Proyecto realizado por Angelo Gonzalez</p>
     <div style="text-align:center; margin-top:20px;">
-  <a href="https://ahorasiqueescribo.blogspot.com/" target="_blank" class="boton-enlace">
+  <button 
+  type="button" 
+  class="btn-buscar boton-secundario"
+  onclick="window.open('https://ahorasiqueescribo.blogspot.com/', '_blank')">
+  Ver Cuecas Filetes
+</button>
     Ver Cuecas Filetes
   </a>
 </div>
@@ -80,6 +85,7 @@
 </body>
 
 </html>
+
 
 
 
