--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <title>Buscador de Cuecas por Tono</title>
   <link rel="stylesheet" href="styles.css?v=1">
-  </head>
+</head>
+
 
 <body>
-   <header class="encabezado">
-    <h1>Buscador de Cuecas por Tono</h1>
-    <p>CUECANCIONERO CHORO</p>
+  <header class="encabezado">
+    <h1 class="header-title">Buscador de Cuecas por Tono</h1>
+    <p class="header-sub">CUECANCIONERO CHORO</p>
+    <p class="subtexto-header">Página pensada y creada para ser un aporte a la cultura y folclore Chileno</p>
+
   </header>
 
   <main class="contenedor">
@@ -64,32 +69,23 @@
       </p>
     </section>
   </main>
-  
+
 
   <footer class="pie">
-    <p>Proyecto realizado por Angelo Gonzalez</p>
+
     <div style="text-align:center; margin-top:20px;">
-  <button 
-  type="button" 
-  class="btn-buscar boton-secundario"
-  onclick="window.open('https://ahorasiqueescribo.blogspot.com/', '_blank')">
-</button>
-    Ver Cuecas Filetes
-  </a>
-</div>
+      <button type="button" class="btn-buscar boton-footer"
+        onclick="window.open('https://ahorasiqueescribo.blogspot.com/', '_blank')">
+        Ir a Cuecas Filetes
+      </button>
+      <p class="copyright">&copy; 2025 Angelo Gonzalez V. Todos los derechos reservados.</p>
+
+      </a>
+    </div>
   </footer>
 
   <script src="app.js"></script>
- <script src="app.js?v=1"></script>
+  <script src="app.js?v=1"></script>
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
