--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         </div>
 
         <button type="submit" class="btn-principal">Sapiar Cuequitas</button>
+        <button type="button" id="btn-azar" class="btn-principal" style="background-color:#008f39;">
+  Cueca al Azar
+</button>
+
 
         <p id="mensaje" class="mensaje"></p>
       </form>
